Fixed spacing of hexagram buttons

--- a/public/style.css
+++ b/public/style.css
@@ -203,9 +203,8 @@ ol{
   font-family: 'Courier New', Courier, monospace;
   text-align: center;
   vertical-align: middle;
-  margin: 0px;
-  padding-left: 5px;
-  padding-right: 5px;
+  margin-bottom: 5px;
+  padding: 0px;
   border: 1px solid black;
   cursor: pointer;
 }
